Working on base templates

--- a/app/assets/style/source/main.sass
+++ b/app/assets/style/source/main.sass
@@ -3,25 +3,16 @@
 @import _core/h5bp
 @import _core/initializr
 
-body
-	font: 80% Verdana, sans-serif
-
-h1
-	font: 48pt 'Satisfy', cursive
-	width: 100%
-	text-align: center
-	padding-top: 25px
-
-p
-	margin: 15px 0
-	padding: 5px 0
+math
+	display: none
 
 #main
-	position: absolute
+	position: fixed
 	top: 0
 	left: 0
 	bottom: 0
 	right: 0
+	background: #222
 
 @import _core/helpers
 @import _core/mediaqueries
