--- a/app/templates/source/core/__base.html
+++ b/app/templates/source/core/__base.html
@@ -87,12 +87,9 @@
 		{% endblock meta %}
 
 		{%- block prenorth -%}{%- endblock -%}
-		{%- block north -%}
-			{% include "core/__north.html" %}
-		{%- endblock -%}
 		{% block postnorth %}{% endblock %}
 
-		<title>{% block title %}Welcome to AppTools!{% endblock title %}</title>
+		<title>{% block title %}fatcatmap ^.^{% endblock title %}</title>
 	{% endblock %}
 </head>
 
