--- a/app/assets/style/static/compiled/main.css
+++ b/app/assets/style/static/compiled/main.css
@@ -336,28 +336,17 @@ nav a:hover {
   padding: 20px 0;
 }
 
-body {
-  font: 80% Verdana, sans-serif;
-}
-
-h1 {
-  font: 48pt "Satisfy", cursive;
-  width: 100%;
-  text-align: center;
-  padding-top: 25px;
-}
-
-p {
-  margin: 15px 0;
-  padding: 5px 0;
+math {
+  display: none;
 }
 
 #main {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
+  background: #222222;
 }
 
 .ir {
