--- a/app/templates/source/main/mapper.html
+++ b/app/templates/source/main/mapper.html
@@ -1,4 +1,4 @@
-{% extends "core/base_web.html" %}
+{% extends "layout/map.html" %}
 
 {% block mapper %}
 	{% include "snippets/mapper.html" with context %}
