--- a/app/templates/source/snippets/header_right.html
+++ b/app/templates/source/snippets/header_right.html
@@ -1,7 +1,8 @@
 {% if util.api.users.get_current_user() is not none %}
 <div id='authbox'>
 	<div id='userbox' data-user-nickname='{{ util.api.users.get_current_user().nickname() }}'>
-		<b>Welcome back, {{ util.api.get_current_user().nickname() }}!</b>
+		<b><a href='#'>Welcome back, {{ util.api.users.get_current_user().nickname() }}!</a></b>
+		<img src="{{ gravatarify(util.api.users.get_current_user().email(), 'jpg', 32) }}" alt='you!' />
 	</div>
 </div>
 {% else %}
