--- a/app/templates/source/snippets/header_right.html
+++ b/app/templates/source/snippets/header_right.html
@@ -8,6 +8,6 @@
 {% else %}
 <div id='authbox'>
 	<b><a href='{{ link("auth/login") }}' title="log in!">log in!</a></b>
-	<b><a href='{{ link("about") }}'>about fatcatmap</a></b>
+	<b><a href='{{ link("about") }}'>about</a></b>
 </div>
 {% endif %}
